--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-balck head
+<!DOCTYPE html> 
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>Cascading Style Sheets</title>
+        <link rel="stylesheet" href="css/style.css">
+    </head>
+    <body>
+        <div class="bukva">
+            <div class="block">
+                <div class="inner"></div>
+                <hl><span class="red"></span></hl>
+                <h1><span class="red">Ф</span>иксики <span class="red">М</span>ультсериал</h1>
+                <pl>Сюжет Мультсериал рассказывает о приключениях маленьких человечков — Фиксиков, которые живут внутри различных приборов и техники, содержат её в порядке и отлично знают, что и как устроено. ... Узнавать больше о разных вещах им помогают старшие фиксики — их родители Папус и Мася, а также дедушка Дедус.</pl>
+                <h3><span class="red">Режисёры:</span></h3>
+                <ul>
+                    <li>Лариса Брохман</li>
+                    <li>Яков Васильев</li>
+                    <li>Андрей Кононов</li>
+                    </ul>
+                </div>
+            </div>
+
+    </body>
+    </html>
+
+
+
+
